Prevent wrapping on small screens

--- a/index.css
+++ b/index.css
@@ -31,4 +31,5 @@ button.btn  {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  white-space: nowrap;
 }
